# Intelligent-Photo-Capture-System

./: .gitignore  Readme.md  dev_notes.md  package.xml  requirements.txt  setup.cfg  setup.py
config/: config.yaml  domain_loader.py  exposure_config.yaml  photo_capture.yaml  settings.py  shared_loader.py  validators.py
config/algorithms/: positioning.yaml  tracking.yaml  vision.yaml
config/hardware/: camera.yaml  gimbal.yaml  sensors.yaml
config/shared/: coordinate_frames.yaml  defaults.yaml  hardware_specs.yaml  ros_topics.yaml
config/system/: logging.yaml  performance.yaml  ros2.yaml
config/workflows/: photo_capture.yaml
docs/: yolo_to_tensorrt.md
mipcs/: __init__.py
mipcs/composition/: auto_framing_engine.py  background_analyzer.py  composition_analyzer.py  framing_calculator.py  shot_optimizer.py
mipcs/control/: camera_controller.py  motion_planner.py  state_machine.py
mipcs/nodes/: photo_capture_node.py  vision_test_node.py
mipcs/positioning/: position_calculator.py  scene_classifier.py  transform_manager.py
mipcs/tracking/: __init__.py  attention_manager.py  motion_predictor.py  person_tracker.py
mipcs/utils/: exceptions.py  geometry_utils.py  logger.py  photo_utils.py  structlog_patch.py  threading_utils.py  voice_guidance.py
scripts/: download_yolo_model.py  yolo_to_tensorrt.py
tests/: debug_yaml.py  hardware_integration_test.py  live_detection_test.py  test_config.py  test_config_validation.py  test_detector.py  test_domain_loader.py  test_face_analyzer.py  test_p2.py  test_shared_loader.py  test_with_images.py
(+7 files in other folders)
